# tree-sitter-vimdoc

./: .editorconfig  .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: FUNDING.yml
.github/workflows/: main.yml  release.yml
bindings/c/: tree-sitter-vimdoc.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_vimdoc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterVimdoc/: vimdoc.h
bindings/swift/TreeSitterVimdocTests/: TreeSitterVimdocTests.swift
corpus/: argument.txt  argument_optional.txt  arguments.txt  backtick.txt  code_block.txt  codeblock.txt  codespan.txt  column_heading.txt  header.txt  heading1_2.txt  heading3-column_heading.txt  headline.txt  hotlink.txt  line_block.txt  option.txt  optionlink.txt  taglink.txt  tags.txt  text.txt  url.txt
queries/help/: highlights.scm
queries/vimdoc/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: argument.txt  argument_optional.txt  arguments.txt  codeblock.txt  codespan.txt  heading1_2.txt  heading3-column_heading.txt  line_block.txt  listitem.txt  optionlink.txt  taglink.txt  text.txt  url.txt
