[package]
name = "tree-sitter-vimdoc"
description = "Vim help file grammar for tree-sitter"
version = "3.0.0"
authors = ["Thomas Vigouroux <tomvig38@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vimdoc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/neovim/tree-sitter-vimdoc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
