[package]
name = "tree-sitter-vimdoc"
description = "Tree-sitter grammar for Vim help files"
version = "3.0.1"
license = "Apache-2.0"
keywords = ["incremental", "parsing", "neovim", "vimdoc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/neovim/tree-sitter-vimdoc"
authors = ["Thomas Vigouroux <tomvig38@gmail.com>"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.25.0"

[build-dependencies]
cc = "^1.0.89"
