[package]
name = "tree-sitter-vimdoc"
description = "Tree-sitter grammar for Vim help files"
version = "4.1.0"
authors = ["Justin M. Keyes <justinkz@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vimdoc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/neovim/tree-sitter-vimdoc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.25.10"
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
