[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-vimdoc"
description = "Vim help file grammar for tree-sitter"
version = "3.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "vimdoc"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Thomas Vigouroux", email = "tomvig38@gmail.com" }]
requires-python = ">=3.9"
license.text = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/neovim/tree-sitter-vimdoc"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
