[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-vimdoc"
description = "Tree-sitter grammar for Vim help files"
version = "3.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "vimdoc"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
authors = [
  {name = "Thomas Vigouroux", email = "tomvig38@gmail.com"}
]
requires-python = ">=3.8"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/neovim/tree-sitter-vimdoc"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
